<resources>
    <string name="app_name">FinalReport_02_20181030</string>
    <string name="first_title">맛집추천</string>
    <string name="menu_add">맛집 추가</string>
    <string name="menu_introduce">개발자 소개</string>
    <string name="menu_search">식당 검색</string>
    <string name="menu_close">앱 종료</string>
    <string name="update_title">맛집수정</string>
    <string name="signaturemenu">시그니처 메뉴</string>
    <string name="write_signaturemenu">시그니처 메뉴를 입력하세요.</string>
    <string name="restaurantname">음식점 이름</string>
    <string name="write_restaurantname">음식점 이름을 입력하세요.</string>
    <string name="ratingbar">평점</string>
    <string name="write_ratingbar">평점을 입력하세요.</string>
    <string name="price">가격</string>
    <string name="write_price">가격을 입력하세요.</string>
    <string name="location">장소</string>
    <string name="write_location">장소를 입력하세요.</string>
    <string name="dialog_title">맛집 삭제</string>
    <string name="dialog_message">삭제하시겠습니까?</string>
    <string name="dialog_ok">삭제</string>
    <string name="dialog_cancel">취소</string>
    <string name="close_dialog_title">앱 종료</string>
    <string name="close_dialog_message">앱을 종료하시겠습니까?</string>
    <string name="close_dialog_ok">종료</string>
    <string name="close_dialog_cancel">취소</string>
    <string name="intro_class_num">분반 : 02</string>
    <string name="intro_id">학번 : 20181030</string>
    <string name="intro_name">name : 한유진</string>
    <string name="intro_me">저는 세끼 다 빵을 먹을정도로 빵을 좋아해요.
        조금씩 개발에 흥미를 가지는 중입니다.
    이번 방학에 공모전에 참여해볼 생각입니다!
    이번 모바일소프트웨어 수업이 가장 흥미로웠습니다!
    앞으로 더 열심히 공부해볼 계획입니다.</string>
    <string name="search_title">식당 정보 검색</string>

</resources>